# drama_llama

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md  TERMS_OF_USE.md
.claude/memory/: blallama_session_state_pollution.md  build_flag_experiments.md  cogito_v2_architecture.md  cogito_v2_full_gpu_partial_landed.md  cogito_v2_full_gpu_plan.md  cogito_v2_full_gpu_session2_landed.md  cogito_v2_gpu_mla_landed.md  cogito_v2_gpu_mla_plan.md  cogito_v2_landing_state.md  cogito_v2_next_session_plan.md  feedback_reboot_before_benches.md  future_work_block_predictor.md  future_work_calloutcome_to_message.md  future_work_conversion_tooling.md  future_work_flash_moe_backend.md  future_work_graceful_shutdown.md  future_work_grammar_speculation.md  future_work_resuming_prefill_failure.md  future_work_rust_audit.md  grammar_reserved_token_loop.md  moeflux_disk_convention.md  plan_5d6_async_pread.md  plan_5d7_gpu_full_attn.md  plan_5d8_chained_cmd3_norm.md  plan_5d9_overlap_layer_dispatch.md  plan_logging_predictor.md  plan_phase4_a3b_8bit_landed.md  plan_phase4_a3b_gate_offset_fixed.md  plan_phase4_gate4_findings.md  plan_phase4_gate4_handoff.md  plan_phase4_moeflux_a3b_debug.md  plan_phase7_typed_memory_seq_rm.md  plan_v0.8.0_backend_split.md  profile_post_5d8.md  provider_trust_discipline.md  qwen3_long_form_degradation.md  qwen_cmdbuf_consolidation_plan.md  qwen_prefetch_set_based_landed.md  riir_moeflux_strategy.md  riir_unsafe_audit.md
examples/: chat_repl.rs  dump_template.rs  strawberry.rs  whodunit.rs
models/: README.md
src/: backend.rs  batch.rs  candidates.rs  chat_template.rs  cli.rs  data.rs  engine.rs  grammar_compile.rs  lib.rs  model.rs  ngram.rs  output_config.rs  predictor.rs  probability.rs  probe.rs  prompt.rs  sample.rs  server.rs  sidecar.rs  tool_choice.rs  utils.rs
src/data/: banned.rs  ignore_category.rs  stopwords.rs
src/llama_cpp/: decoder.rs  engine.rs  mod.rs  model.rs
src/model/: vocab.rs
src/moeflux/: decoder.rs  engine.rs  mod.rs  model.rs
src/prompt/: format.rs
src/sample/: grammar.rs  json.rs  repetition.rs
src/session/: mod.rs  parse.rs
src/utils/: test.rs
tests/: anthropic_shape_render.rs  cross_backend.rs  moeflux_session_pollution.rs  moeflux_smoke.rs  output_config.rs  probe_hook.rs  regression.rs  session.rs  template_rendering.rs
tests/data/: README.md
tests/data/banned_ngrams/: ngrams-english-llama.txt
tests/data/detect-infringement/lyrics/: 5_on_it.txt  README.md  a_day_in_the_life.txt  a_whole_new_world.txt  aenema.txt  bad_romance.txt  barbie_girl.txt  bohemian_rhapsody.txt  born_this_way.txt  buckley-hallelujah.txt  can_you_feel_the_love_tonight.txt  candle_in_the_wind.txt  closer.txt  cohen-hallelujah.txt  eleanor.txt  father_lucifer.txt  fire_water_burn.txt  gangstas_paradise.txt  graceland.txt  hakuna_matata.txt  hotel_california.txt  imagine.txt  je_ne_regrette_rien.txt  knockin_on_heavens_door.txt  landslide.txt  last_cristmas.txt  life_on_mars.txt  like_a_prayer.txt  like_a_virgin.txt  loser.txt  lovin_feeling.txt  my_name_is.txt  my_way.txt  nothing_compares.txt  one_more_time.txt  rhiannon.txt  running_up_that_hill.txt  sober.txt  sound_of_silence.txt  sympathy_for_the_devil.txt  (+6 more)
tests/data/detect-infringement/nyt/: README.md  guys.txt  snow_fall.txt
tests/data/detect-infringement/scientology/: README.md  ot3.txt
tests/data/detect-infringement/tolkien/: hobbit-chapter-1.txt  hobbit-chapter-2.txt
tests/fixtures/: .gitignore  cogito_14b_template.jinja  render_jinja.py
tests/fixtures/regression/: llama_cpp_baseline.json
tests/fixtures/shapes/: 03_strawberry_turn_1.expected.txt  03_strawberry_turn_1.vars.json  04_strawberry_turn_2.expected.txt  04_strawberry_turn_2.vars.json
