[package]
name = "drama_llama"
version = "0.7.0"
edition = "2021"
description = "A library for language modeling and text generation."
license-file = "LICENSE.md"
repository = "https://github.com/mdegans/drama_llama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-sys-3 = "0.6"

derive_more = "0.99.17"
num = "0.4"
uuid = { version = "1", features = ["v4"] }
partial_sort = { version = "0.2.0" }
rand = { version = "0.9" }
regex = "1.10"
static_assertions = "1.1.0"
thiserror = "1.0"
tinyvec = { version = "1.6", features = ["alloc"] }
xorshift = "0.1"
rayon = "1.10.0"
dashmap = "6"
rustc-hash = "2"
minijinja = { version = "2.5", features = ["loader", "json"] }
minijinja-contrib = { version = "2.5", features = ["pycompat"] }
misanthropic = { git = "https://github.com/mdegans/misanthropic.git", branch = "dev", default-features = false, features = [
    "partial-eq",
] }

axum = { version = "0.8", optional = true }
tokio = { version = "1", optional = true }
markdown = { version = "=1.0.0-alpha.16", optional = true }
rocket = { version = "0.5", optional = true, features = ["json"] }
clap = { version = "4.5", optional = true, features = ["derive"] }
stringmetrics = { version = "2.2.2", optional = true }
toml = { version = "0.8", optional = true }
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
dirs = { version = "5.0.1", optional = true }
egui = { version = "0.34", optional = true }
eframe = { version = "0.34", optional = true }
egui_file = { version = "0.26", optional = true }
egui_extras = { version = "0.34", optional = true, features = ["all_loaders"] }
image = { version = "0.25", optional = true, features = ["png"] }
rustyline = { version = "14", optional = true }
schemars = { version = "1", optional = true }


[features]
webchat = ["dep:rocket", "toml", "dep:dirs", "dep:markdown", "serde"]
toml = ["dep:toml"]
cli = ["dep:clap"]
serde = ["tinyvec/serde"]
stats = ["dep:stringmetrics"]
cuda = ["llama-cpp-sys-3/cuda"]
cuda_f16 = ["llama-cpp-sys-3/cuda_f16"]
egui = [
    "dep:egui",
    "dep:eframe",
    "dep:egui_file",
    "dep:egui_extras",
    "dep:image",
]
repl = ["dep:rustyline", "cli"]
axum = ["dep:axum", "tokio/full"]
# Enable typed structured-output helpers: `Prompt::structured_output::<T>()`,
# `OutputConfig::for_type::<T>()`. Requires `schemars` for schema derivation.
json-schema = ["dep:schemars", "misanthropic/json-schema"]

[[example]]
name = "strawberry"
required-features = ["cli"]

[[example]]
name = "chat_repl"
required-features = ["repl"]

[[example]]
name = "whodunit"
required-features = ["json-schema"]

[[bin]]
name = "regurgitater"
path = "bin/regurgitater/regurgitater.rs"
required-features = ["webchat", "cli", "stats"]

[[bin]]
name = "settings_tool"
path = "bin/settings_tool/settings_tool.rs"
required-features = ["egui", "serde", "serde_json"]

[[bin]]
name = "blallama"
path = "bin/blallama/blallama.rs"
required-features = ["axum", "cli"]

[package.metadata.docs.rs]
# `cuda` will break the build on platforms without it, and it doesn't change the
# docs anyway.
features = ["webchat", "cli", "stats", "toml", "serde", "egui", "json-schema"]
