[package]
name = "drama_llama"
version = "0.8.0"
edition = "2021"
description = "A library for language modeling and text generation."
license-file = "LICENSE.md"
repository = "https://github.com/mdegans/drama_llama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-sys-3 = { version = "0.7", optional = true }

# moeflux (Metal-backed streaming-MoE decoder) is path-dep'd while the
# fork is private and pre-crates.io. macOS-only; drama_llama's own
# `moeflux` feature wraps the platform gate so cross-platform builds
# still work via `--no-default-features`.
moeflux = { path = "../moeflux/crates/moeflux", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }

derive_more = { version = "1", features = ["from"] }
num = "0.4"
uuid = { version = "1", features = ["v4"] }
partial_sort = { version = "0.2.0" }
rand = { version = "0.9" }
regex = "1.10"
static_assertions = "1.1.0"
thiserror = "1.0"
tinyvec = { version = "1.6", features = ["alloc"] }
xorshift = "0.1"
rayon = "1.10.0"
dashmap = "6"
rustc-hash = "2"
minijinja = { version = "2.5", features = ["loader", "json"] }
minijinja-contrib = { version = "2.5", features = ["pycompat"] }
misanthropic = { git = "https://github.com/mdegans/misanthropic.git", branch = "dev", default-features = false, features = [
    "partial-eq",
] }

axum = { version = "0.8", optional = true }
tokio = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
markdown = { version = "=1.0.0-alpha.16", optional = true }
rocket = { version = "0.5", optional = true, features = ["json"] }
clap = { version = "4.5", optional = true, features = ["derive"] }
stringmetrics = { version = "2.2.2", optional = true }
toml = { version = "0.8", optional = true }
serde_json = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
dirs = { version = "5.0.1", optional = true }
egui = { version = "0.34", optional = true }
eframe = { version = "0.34", optional = true }
egui_file = { version = "0.26", optional = true }
egui_extras = { version = "0.34", optional = true, features = ["all_loaders"] }
image = { version = "0.25", optional = true, features = ["png"] }
rustyline = { version = "14", optional = true }
schemars = { version = "1", optional = true }


[features]
default = ["llama-cpp"]
# `llama-cpp` gates the llama.cpp-backed decoder + model implementations
# and forwards to the (optional) `llama-cpp-sys-3` crate. With
# `--no-default-features` the crate compiles down to the backend-agnostic
# trait layer (Token, TokenData, Decoder, Model, Engine<D, M>,
# Candidates' model-agnostic half, sampling options) with no C dep.
llama-cpp = ["dep:llama-cpp-sys-3"]
# Features below that need concrete llama.cpp types or the Session
# wrapper transitively imply `llama-cpp`.
webchat = [
    "dep:rocket",
    "toml",
    "dep:dirs",
    "dep:markdown",
    "serde",
    "llama-cpp",
]
# `toml` enables per-model sampling sidecar I/O via the `sidecar`
# module. Pulls in `serde` because the sidecar round-trips
# `SampleOptions` through serde-derived impls.
toml = ["dep:toml", "serde"]
cli = ["dep:clap", "llama-cpp"]
serde = ["tinyvec/serde"]
stats = ["dep:stringmetrics"]
cuda = ["llama-cpp", "llama-cpp-sys-3/cuda"]
cuda_f16 = ["llama-cpp", "llama-cpp-sys-3/cuda_f16"]
egui = [
    "dep:egui",
    "dep:eframe",
    "dep:egui_file",
    "dep:egui_extras",
    "dep:image",
]
repl = ["dep:rustyline", "cli"]
axum = [
    "dep:axum",
    "tokio/full",
    "tracing/async-await",
    "tracing-subscriber/json",
    "tracing-subscriber/env-filter",
    "llama-cpp",
]
# Enable typed structured-output helpers: `Prompt::structured_output::<T>()`,
# `OutputConfig::for_type::<T>()`. Requires `schemars` for schema derivation.
json-schema = ["dep:schemars", "misanthropic/json-schema"]

# `moeflux` gates the moeflux-backed Decoder + Model implementations.
# Pulls in the safe `moeflux` wrapper (compiled C/Metal inside) and the
# HuggingFace `tokenizers` crate for Rust-side tokenization. Exactly one
# of `moeflux-model-*` must be enabled alongside — the shape is a
# compile-time constant in moeflux's C side.
moeflux = ["dep:moeflux", "dep:tokenizers"]
moeflux-model-qwen3-5-a17b = ["moeflux", "moeflux/model-qwen3-5-a17b"]
moeflux-model-qwen3-6-35b-a3b = ["moeflux", "moeflux/model-qwen3-6-35b-a3b"]

[[example]]
name = "strawberry"
required-features = ["cli"]

[[example]]
name = "chat_repl"
required-features = ["repl"]

[[example]]
name = "whodunit"
required-features = ["json-schema"]

[[bin]]
name = "regurgitater"
path = "bin/regurgitater/regurgitater.rs"
required-features = ["webchat", "cli", "stats"]

[[bin]]
name = "settings_tool"
path = "bin/settings_tool/settings_tool.rs"
required-features = ["egui", "serde", "serde_json"]

[[bin]]
name = "blallama"
path = "bin/blallama/blallama.rs"
required-features = ["axum", "cli", "toml"]

[package.metadata.docs.rs]
# `cuda` will break the build on platforms without it, and it doesn't change the
# docs anyway.
features = ["webchat", "cli", "stats", "toml", "serde", "egui", "json-schema"]
